Site - Maj + Ajout majeur

--- a/Client Web/Formation Aquatiques/BNSSA.html
+++ b/Client Web/Formation Aquatiques/BNSSA.html
@@ -70,9 +70,9 @@
 <hr />
 <div class="alert alert-warning">L'adh&eacute;sion au club doit &ecirc;tre rajout&eacute;e pour participer aux formations <strong>(fix&eacute;e &agrave; 20 euros)</strong></div>
 <div class="alert alert-info"><strong>Remarque:</strong> Possibilit&eacute; de payer en 3 fois sans frais</div>
-<h4 class="text-info">Tarif :</h4>
-<h6>PSE 1 : <small>220 Euros</small></h6>
-<h6>Package PSE1 + PSE2 : <small>400 euros</small></h6>
+<hr />
+<h4 class="text-info mt-4">Informations :</h4>
+<p class="center"><a href="http://www.clubdesauvetagetoulousain.org/index.php/tarifs#pole_aquatique" class="btn btn-info btn-lg" role="button" aria-pressed="true">Les Tarifs</a></p>
 <hr />
 <h4 class="text-info">Dossier :</h4>
 <p>Le dossier d'inscription &agrave; l'examen du BNSSA est &agrave; t&eacute;l&eacute;charger</p>
