--- a/Client Web/Formations Secouriste/PSE2.html
+++ b/Client Web/Formations Secouriste/PSE2.html
@@ -12,6 +12,8 @@
 	<li>Titulaire du PSE 1 qui souhaite se perfectionner</li>
 	<li>Secouriste</li>
 	<li>Professionnel BNSSA, Pisteur, MNS, agent de s&eacute;curit&eacute;&hellip;</li>
+	<li>Personne souhaitant avoir une activité citoyenne</li>
+	<li>Personne souhaitant avoir une plue-valu pour entrer dans une formation ex : infirmière...</li>
 </ul>
 <h4 class="text-danger">La formation du PSE2 :</h4>
 <p>Etre titulaire du PSE 1 est un pr&eacute;-requis &agrave; la formation.</p>
@@ -96,11 +98,8 @@
 <p>Dates disponnibles dans le calendrier ci-contre</p>
 <p>Pour toute demande de formation en structure, merci de nous contacter via notre adresse mail <a href="mailto:cstsecretariat@live.fr" class="text-danger">cstsecretariat@live.fr</a></p>
 <hr />
-<div class="alert alert-warning">L'adh&eacute;sion au club doit &ecirc;tre rajout&eacute;e pour participer aux formations <strong>(fix&eacute;e &agrave; 20 euros)</strong></div>
-<div class="alert alert-info"><strong>Remarque:</strong> Possibilit&eacute; de payer en 3 fois sans frais</div>
-<h4 class="text-danger">Tarif :</h4>
-<h6>PSE 2 : <small>240 Euros</small></h6>
-<h6>Package PSE1 + PSE2 : <small>450 euros</small></h6>
+<h4 class="text-danger">Informations :</h4>
+<p class="center"><a href="http://www.clubdesauvetagetoulousain.org/index.php/tarifs#pole_formation" class="btn btn-danger btn-lg" role="button" aria-pressed="true">Les Tarifs</a></p>
 <hr />
 <h4 class="text-danger">En compl&eacute;ment :</h4>
 <ul>
