--- a/Client Web/Partenariat/Partenariat.html
+++ b/Client Web/Partenariat/Partenariat.html
@@ -34,7 +34,19 @@
 		</div>
 	</div>
 	<div class="col-sm-6 col-md-4">
-		<div class="card"><img src="images/Images_Articles/Partenaires/mairedetoulouse.png" alt="credit mutuel saint egreve" class="card-img-top" />
+		<div class="card"><img src="images/Images_Articles/Partenaires/mairederamonville.png" alt="mairie de ramonville" class="card-img-top" />
+			<div class="card-body">
+				<hr />
+				<h4 class="center">Mairie de Ramonville</h4>
+				<h6 class="center" style="text-transform: uppercase;">Ramonville Saint-Agne</h6>
+			</div>
+			<div class="card-footer">
+				<div style="text-align: center;"><a href="https://www.ramonville.fr" class="btn btn-warning text-center">Visiter</a></div>
+			</div>
+		</div>
+	</div>
+	<div class="col-sm-6 col-md-4">
+		<div class="card"><img src="images/Images_Articles/Partenaires/mairedetoulouse.png" alt="mairie de toulouse" class="card-img-top" />
 			<div class="card-body">
 				<hr />
 				<h4 class="center">Mairie de Toulouse</h4>
