--- a/Client Web/Sauvetage Sportif/les-groupes-d-entrainements.html
+++ b/Client Web/Sauvetage Sportif/les-groupes-d-entrainements.html
@@ -6,11 +6,17 @@
     </div>
     <hr />
     <h4 id="Horraires" class="text-success mt-4">Horraires :</h4>
+    <p>Piscine :</p>
     <ul>
         <li>Lundi : 21h - 23h00</li>
         <li>Mardi : 20h45 - 23h00</li>
         <li>Mercredi : 20h45 - 23h00</li>
-        <li>Samedi : 9h00 - 12h00</li>
+        <li>Samedi : 18h00 - 21h00</li>
+    </ul>
+    <p>Côtier :</p>
+    <ul>
+        <li>Mardi : 12h30 - 14h00</li>
+        <li>Samedi : 12h30 - 14h00</li>
     </ul>
     <hr />
     <h4 class="text-success mt-4">Les Jeunes :</h4>
@@ -45,3 +51,6 @@
             </div>
         </div>
     </div>
+    <hr />
+    <h4 class="text-success mt-4">Informations :</h4>
+    <p class="center"><a href="http://www.clubdesauvetagetoulousain.org/index.php/tarifs#pole_sportif" class="btn btn-success btn-lg" role="button" aria-pressed="true">Les Tarifs</a></p>
