--- a/Client Web/tarifs.html
+++ b/Client Web/tarifs.html
@@ -1,17 +1,308 @@
 <div class="jumbotron jumbotron-fluid bg-warning text-dark">
 	<div class="container">
 		<h1 class="display-4">Tarifs</h1>
-		<p class="lead">Tarifs de la saison 2017 - 2018</p>
+		<p class="lead">Tarifs de la saison 2018 - 2019</p>
 	</div>
 </div>
 <hr />
-<p><img src="images/Images_Articles/Tarifs/Tarfis_poles_aquatiques_sb.png" alt="Tarfis poles aquatiques sb" class="img-fluid" /> <img src="images/Images_Articles/Tarifs/Tarifs_poles_aquatiques_bnssa.png" alt="Tarifs poles aquatiques bnssa" class="img-fluid" /> <img src="images/Images_Articles/Tarifs/Tarfis_poles_sauvetage.png" alt="Tarfis poles sauvetage" class="img-fluid" /> <img src="images/Images_Articles/Tarifs/Tarifs_poles_formations.png" alt="Tarifs poles formations" class="img-fluid" /></p>
-<p>Les tarifs sont t&eacute;l&eacute;chargeables :</p>
-<div class="row text-center">
-	<div class="col-sm-12 col-md-12">
-		<div class="card">
-			<div class="card-body"><em class="fas fa-file text-info" style="font-size: 45px;"></em>
-				<p>Tarifs 2017-2018</p>
+<div class="btn-group d-flex justify-content-center"><a href="#pole_aquatique" class="btn btn-info w-100">Pole Aquatique</a><a href="#pole_formation" class="btn btn-danger w-100">Pole Formation</a><a href="#pole_sportif" class="btn btn-success w-100">Pole Sportif</a></div>
+<hr />
+<div class="alert alert-danger">
+	<h4 class="alert-heading">&nbsp;</h4>
+	<p><span class="font-weight-bold">Remarque :</span>Tous les prix suivis par une * ne prennent pas en compte <span class="font-weight-bold">adhesion obligatoire</span> &agrave; la licence de <span class="font-weight-bold">20&euro;</span></p>
+	<p class="mb-0">&nbsp;</p>
+</div>
+<hr />
+<h4 id="pole_aquatique" class="text-info"><span style="text-decoration: underline;">Pole Aquatique</span></h4>
+<h5 class="text-info">Formation initiale BNSSA</h5>
+<div class="container-fluid content-row">
+	<div class="row text-center mb-4 text-white">
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>BNSSA</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation Th&eacute;orique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">&nbsp;</p>
+					<h2 class="bg-white text-info">240 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>BNSSA + PSE1</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation Th&eacute;orique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation PSE1 35h</p>
+					<h2 class="bg-white text-info">440 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>BNSSA UFR STAPS</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation Th&eacute;orique</p>
+					<p style="margin-top: -20px;">sur pr&eacute;sentation d'un justificatif</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">&nbsp;</p>
+					<h2 class="bg-white text-info">180 &euro;</h2>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>BNSSA + PSE1 + PSE2</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation Th&eacute;orique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation PSE1 35h</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation PSE2 28h</p>
+					<h2 class="bg-white text-info">660 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<h5 class="text-info">Recyclage BNSSA</h5>
+<div class="container-fluid content-row">
+	<div class="row text-center mb-4 text-white">
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>Recyclage BNSSA</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">&nbsp;</p>
+					<h2 class="bg-white text-info">150 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>Recyclage BNSSA + Secourisme</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation PSE1 ou PSE2 7h30</p>
+					<h2 class="bg-white text-info">180 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<h5 class="text-info">Formation initiale Surveillant de Baignade</h5>
+<div class="container-fluid content-row">
+	<div class="row text-center mb-4 text-white">
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>Surveillant de Baignade</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation R&eacute;glementation</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">&nbsp;</p>
+					<h2 class="bg-white text-info">160 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>Surveillant de Baignade + PSC1 + Complement SB</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation R&eacute;glementation</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation PSC1 7h</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Extension SB 3h</p>
+					<h2 class="bg-white text-info">220 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<h5 class="text-info">Recyclage Surveillant Baignade</h5>
+<div class="container-fluid content-row">
+	<div class="row text-center mb-4 text-white">
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>Surveillant Baignade</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">&nbsp;</p>
+					<h2 class="bg-white text-info">110 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>Surveillant Baignade + Secourisme</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation PSC1 7h30</p>
+					<h2 class="bg-white text-info">120 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<hr />
+<h4 id="pole_formation" class="text-danger"><span style="text-decoration: underline;">Pole Formation</span></h4>
+<h5 class="text-danger">Formation Intiale</h5>
+<div class="container-fluid content-row">
+	<div class="row text-center mb-4 text-white">
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>PSC1</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Formation Th&eacute;orique</p>
+					<h2 class="bg-white text-danger">40 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>PSE1</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Formation Th&eacute;orique</p>
+					<h2 class="bg-white text-danger">220 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>PSE2</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Formation Th&eacute;orique</p>
+					<h2 class="bg-white text-danger">250 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>PSE1 + PSE2</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Formation Th&eacute;orique</p>
+					<h2 class="bg-white text-danger">450 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<h5 class="text-danger">Formation Continue</h5>
+<div class="container-fluid content-row">
+	<div class="row text-center mb-4 text-white">
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>Formation Continue PSC1</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Formation Th&eacute;orique</p>
+					<h2 class="bg-white text-danger">20 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>Formation Continue PSE1</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Formation Th&eacute;orique</p>
+					<h2 class="bg-white text-danger">30 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>Formation Continue PSE2</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Formation Th&eacute;orique</p>
+					<h2 class="bg-white text-danger">30 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>Monitorat Premier Secours</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Formation Th&eacute;orique</p>
+					<h2 class="bg-white text-danger">450 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<h5 class="text-danger">Formation Etablissement</h5>
+<div class="container-fluid content-row">
+	<div class="row text-center mb-4 text-white">
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>Formation College</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Adh&eacute;sion + Livret de Formation</p>
+					<h2 class="bg-white text-danger">40 &euro;</h2>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>Formation Lyc&eacute;e</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Adh&eacute;sion, Sans Livret de Formation</p>
+					<h2 class="bg-white text-danger">50 &euro;</h2>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<h5 class="text-danger">Formation Initiation</h5>
+<div class="container-fluid content-row">
+	<div class="row text-center mb-4 text-white">
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>Initiation Secourisme</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Initiation</p>
+					<h2 class="bg-white text-danger">10 &euro;</h2>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>Initiation Défibrillateur</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Initiation</p>
+					<h2 class="bg-white text-danger">5 &euro;</h2>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<hr />
+<h4 id="pole_sportif" class="text-success">Pole Sportif</h4>
+<div class="container-fluid content-row">
+	<div class="row text-center mb-4 text-white">
+		<div class="col-sm-12 col-md-12 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-success">
+					<h2>Sauvetage Sportif</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Entrainements</p>
+					<p class="font-weight-bold" style="margin-top: -10px;">Pr&eacute;paration Physique G&eacute;n&eacute;rale</p>
+					<h2 class="bg-white text-success">240 &euro;*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 &euro;</p>
+				</div>
 			</div>
 		</div>
 	</div>
