--- a/Client Web/Formations Secouriste/PSE1.html
+++ b/Client Web/Formations Secouriste/PSE1.html
@@ -11,6 +11,8 @@
 <ul>
 	<li>Le citoyen qui souhaite se perfectionner</li>
 	<li>Cr&eacute;ation d&rsquo;un projet professionnel dans le but de devenir BNSSA, MNS, pisteur, secouriste&hellip;</li>
+	<li>Personne souhaitant avoir une activité citoyenne</li>
+	<li>Personne souhaitant avoir une plue-valu pour entrer dans une formation ex : infirmière...</li>
 </ul>
 <h4 class="text-danger">La formation du PSE1 :</h4>
 <p>D&rsquo;une dur&eacute;e de 35h minimum, elle vous apportera des comp&eacute;tences &eacute;tendues pour vous occuper d&rsquo;une victime au sein d&rsquo;une &eacute;quipe de secours, et veiller &agrave; ce que son &eacute;tat ne s&rsquo;aggrave pas. Les th&egrave;mes suivants sont trait&eacute;s de mani&egrave;re syst&eacute;matique :</p>
@@ -66,11 +68,8 @@
 <p>Dates disponnibles dans le calendrier ci-contre</p>
 <p>Pour toute demande de formation en structure, merci de nous contacter via notre adresse mail <a href="mailto:cstsecretariat@live.fr" class="text-danger">cstsecretariat@live.fr</a></p>
 <hr />
-<div class="alert alert-warning">L'adh&eacute;sion au club doit &ecirc;tre rajout&eacute;e pour participer aux formations <strong>(fix&eacute;e &agrave; 20 euros)</strong></div>
-<div class="alert alert-info"><strong>Remarque:</strong> Possibilit&eacute; de payer en 3 fois sans frais</div>
-<h4 class="text-danger">Tarif :</h4>
-<h6>PSE 1 : <small>220 Euros</small></h6>
-<h6>Package PSE1 + PSE2 : <small>450 euros</small></h6>
+<h4 class="text-danger">Informations :</h4>
+<p class="center"><a href="http://www.clubdesauvetagetoulousain.org/index.php/tarifs#pole_formation" class="btn btn-danger btn-lg" role="button" aria-pressed="true">Les Tarifs</a></p>
 <hr />
 <h4 class="text-danger">En compl&eacute;ment :</h4>
 <ul>
