--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -56,12 +56,6 @@
 				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
 			</tr>
 			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE2</span></th>
-				<td style="margin: auto; text-align: center;"></td>
-				<td style="text-align: center;">Ramonville</td>
-				<td style="text-align: center;">29-04-2019</td>
-			</tr>
-			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
 				<td style="margin: auto; text-align: center;"></td>
 				<td style="text-align: center;">Ramonville</td>
@@ -81,7 +75,7 @@
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-danger">Complete</span></td>
 				<td style="text-align: center;">Plaisaince du Touch</td>
 				<td style="text-align: center;">25-05-2019</td>
 			</tr>
