Auto stash before merge of "master" and "origin/master"

--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-sm-12 col-lg-6 align-self-center">
 			<div class="embed-responsive embed-responsive-16by9 p-4">
-				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xAhjECuyMOM" frameborder="0" allowfullscreen></iframe>
+				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YGvP466FAyc" frameborder="0" allowfullscreen></iframe>
 			</div>
 		</div>
 		<div class="col-sm-12 col-lg-6">
@@ -40,7 +40,6 @@
 	<p style="font-size: 12pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Les inscritions se font en cliquant sur le calendrier ci-contre &agrave; la date et l'&eacute;v&egrave;nement voulu.</p>
 	<p class="center"><a href="http://www.clubdesauvetagetoulousain.org/index.php/calendrier" class="btn btn-danger btn-lg" role="button" aria-pressed="true">Je m'inscrit !</a></p>
 	<p style="font-size: 10pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Toutes nos dates ne sont pas reprises ci-dessous nous vous invitons &agrave; consulter le calendrier ci-contre.</p>
-	<hr />
 	<!-- <span class="label label-warning">En Cours</span> -->
 	<table class="table table-striped" style="margin-left: auto; margin-right: auto;">
 		<thead>
@@ -53,7 +52,7 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
+				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2019 - 2020</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
@@ -105,7 +104,6 @@
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #449d44;">Sauvetage Sportif :</h3>
 	<p class="center" style="color: #449d44; font-size: 12pt;">Les r&eacute;sultats des comp&eacute;titions de la saison 2017 - 2018 disponnibles <a href="index.php?option=com_content&amp;view=article&amp;id=27:actualites&amp;catid=2:non-categorise" style="text-decoration: none; font-weight: bold; color: #339966;">ICI</a></p>
 	<hr/>
-	<p class="center" style="font-size: 12pt; line-height: 20px;">La Toulousaine Tour aura lieux le Samedi 16 Février 2019 à la Piscine Alex Jany (Argoulet), suivez l'evenement <a href="https://www.facebook.com/events/587317188349022/" target="_blank" style="decoration : none;">ICI</a></p>
 </div>
 <!--
 <hr />
